# email_tools

./: .gitignore  .tool-versions  pyproject.toml
src/: main.py  template.html
